--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:design:24.1.1'
     //ormlite maper
     compile 'com.j256.ormlite:ormlite-android:4.48'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
